GNOME Bugzilla – Bug 680464
avdemux_*: not-negotiated error
Last modified: 2012-09-28 16:09:58 UTC
$ gst-launch-1.0 playbin uri=http://s1.atv-stream.de:8190/live.nsv -v
commit 07cec6d216457d1367e83dab5322828cea957c74 Author: Tim-Philipp Müller <tim.muller@collabora.co.uk> Date: Fri Sep 28 16:53:49 2012 +0100 avdemux: fix not-negotiated errors Drop caps event received on the sink pad, instead of putting it in the list of cached events to be sent downstream later. We don't want to send our container caps downstream to our decoders, that'll give us nasty not-negotiated errors. https://bugzilla.gnome.org/show_bug.cgi?id=680464